# senior_design_project

./: .gitattributes  .gitignore  readme.md  tree.txt  使能wifi.txt
APP整体代码/: build-profile.json5  readme.txt
APP整体代码/entry/: build-profile.json5
APP整体代码/entry/src/main/: module.json5
uhand/: OpenArmSTM32.uvgui.fyx  OpenArmSTM32.uvopt  OpenArmSTM32.uvproj  机械掌代码readme.txt
uhand/USER/: PCMsg.c  PWM.c  main.c
yolov8训练/my_dataset_add_cup_cell/: divide.py  labels_all.py  prepare_data.py  readme.md  test_2.py  yolo_class_comparison.csv
yolov8训练/my_dataset_add_cup_cell/image_7/: down_image.py  fix_labels_val.py
yolov8训练/my_dataset_add_cup_cell/image_7/labels/: train.cache  val.cache
yolov8训练/my_dataset_add_cup_cell/result_data/train55/: args.yaml  results.csv
yolov8训练/my_dataset_add_cup_cell/test/labels_all/: 000000001268.txt  000000001296.txt  000000002157.txt  000000002431.txt  000000002592.txt  000000002685.txt  000000003661.txt  000000003845.txt  000000003934.txt  000000005060.txt  000000006763.txt  000000006771.txt  000000007795.txt  000000009400.txt  000000009590.txt  000000010707.txt  000000012576.txt  000000012670.txt  000000013659.txt  000000013729.txt  000000014038.txt  000000015335.txt  000000016598.txt  000000017714.txt  000000017899.txt  000000018380.txt  000000019786.txt  000000020553.txt  000000021503.txt  000000022623.txt  000000023899.txt  000000024243.txt  000000025394.txt  000000025560.txt  000000025603.txt  000000025986.txt  000000026465.txt  000000027186.txt  000000029596.txt  000000031296.txt  (+127 more)
yolov8训练/my_dataset_add_cup_cell/train/labels_all/: 000000001958.txt  000000002347.txt  000000002389.txt  000000003286.txt  000000003425.txt  000000003442.txt  000000003580.txt  000000003823.txt  000000003967.txt  000000005638.txt  000000005641.txt  000000006744.txt  000000007090.txt  000000007277.txt  000000007855.txt  000000008309.txt  000000008718.txt  000000008813.txt  000000008848.txt  000000009729.txt  000000009800.txt  000000010948.txt  000000011034.txt  000000011494.txt  000000011990.txt  000000012839.txt  000000013639.txt  000000014432.txt  000000015220.txt  000000015266.txt  000000016098.txt  000000017205.txt  000000017313.txt  000000017425.txt  000000017566.txt  000000017967.txt  000000019637.txt  000000019695.txt  000000019926.txt  000000020087.txt  (+1649 more)
yolov8训练/my_dataset_add_cup_cell/train_split_coco/: dataset.yaml
yolov8训练/my_dataset_add_cup_cell/train_split_coco/labels/: train.cache  val.cache
小车交互人文关怀工程/: action.py  dofbot_kinematics.py  hei bro.m4a  test.py  voice.py  你好.m4a  握手.m4a
小车整体运行代码/: .gitignore  NOTICE  README.md  readme.txt
小车整体运行代码/doc/Atlas200DK镜像制作/: Atlas200DK镜像压缩与扩容.md
小车整体运行代码/doc/Atlas200DK镜像手册/: Atlas200DK镜像手册1.0.1.md
小车整体运行代码/doc/一键制卡工具使用指南/: 一键制卡工具使用指南.md
小车整体运行代码/doc/模型适配工具用户手册/: 模型适配工具用户手册.md
小车整体运行代码/src/E2E-Sample/Car/: README.md
小车整体运行代码/src/E2E-Sample/ChatBot/: README.md
小车整体运行代码/src/E2E-Sample/HDMI-sample/: README.md
小车整体运行代码/src/E2E-Sample/ROS-AscendCL/ros2_dvpp2_resize/: CMakeLists.txt  package.xml  readme.md
小车整体运行代码/src/E2E-Sample/ROS-AscendCL/ros2_dvpp2_resize/include/: DvppProcess.h  Utils.h
小车整体运行代码/src/E2E-Sample/ROS-AscendCL/ros2_dvpp2_resize/launch/: ros2_dvpp2_launch.py
小车整体运行代码/src/E2E-Sample/ROS-AscendCL/ros2_dvpp2_resize/src/: DvppProcess.cpp  PublisherYuvMsg.cpp  Ros2Dvpp2Resize.cpp  Utils.cpp
小车整体运行代码/src/E2E-Sample/RobotArm/: README.md
小车整体运行代码/src/E2E-Sample/Voice/: README.md
小车整体运行代码/src/E2E-Sample/ros2_robot_arm/: README.md  libconsole-bridge0.4_0.4.4+dfsg-1build1_arm64.deb  liburdfdom-world_1.0.0-2ubuntu0.1_arm64.deb
小车整体运行代码/src/SLAM/ROSArduinoBridge/: ROSArduinoBridge.ino  commands.h  diff_controller.h  encoder_driver.h  encoder_driver.ino  motor_driver.h  motor_driver.ino  sensors.h  servos.h  servos.ino
小车整体运行代码/src/image-builder/: README.md
小车整体运行代码/src/image-builder/A200DK/: modify_partition_header.sh  sd_expand.sh
小车整体运行代码/src/labelme/: install.nsi  labelme.spec  update.nsi
小车整体运行代码/src/labelme/envs/: InstallCondaEnv.bat  env_uninst.bat  requirements.txt
小车整体运行代码/src/labelme/labelme/: __init__.py  __main__.py  app.py  choose_cls_flags.py  env_check.py  flow.py  globalWidget.py  label_file.py  labelme_main.py  model_task.py  run_cmd_utils.py  shape.py  testing.py
小车整体运行代码/src/models_adaption/Int8Quant/: README.md
小车整体运行代码/src/models_adaption/config/: config.py  config.yaml
小车整体运行代码/src/notebook-tutorials/01-yolov5/: det_utils.py  main.ipynb
小车整体运行代码/src/notebook-tutorials/02-ocr/: main.ipynb  model.py  utils.py
小车整体运行代码/src/notebook-tutorials/03-resnet/: constant.py  main.ipynb
小车整体运行代码/src/notebook-tutorials/04-image-HDR-enhance/: main.ipynb
小车整体运行代码/src/notebook-tutorials/05-garbage-classification/: main.ipynb
小车整体运行代码/src/notebook-tutorials/06-cartoonGAN_picture/: main.ipynb
小车整体运行代码/src/notebook-tutorials/07-human_protein_map_classification/: main.ipynb
小车整体运行代码/src/notebook-tutorials/08-Unet++/: main.ipynb
小车整体运行代码/src/notebook-tutorials/09-portrait_pictures/: main.ipynb
小车整体运行代码/src/notebook-tutorials/10-speech-recognition/: main.ipynb
小车整体运行代码/src/operator_dev/: readme.md
小车整体运行代码/src/operator_dev/MS_project/: readme.md
小车整体运行代码/src/operator_dev/custom_op/: README_CN.md  build.sh
小车整体运行代码/src/rpi-imager/: license.txt
小车整体运行代码/src/rpi-imager/src/: CMakeLists.txt  IpMsgPopup.qml  MsgPopup.qml  cli.cpp  config.h  downloadextractthread.cpp  downloadextractthread.h  downloadthread.cpp  downloadthread.h  drivebackupthread.cpp  drivebackupthread.h  driveformatthread.cpp  driveformatthread.h  drivelistitem.cpp  main.cpp  (+13 more)
小车芯片rt1064工程/: 小车readme.txt
小车芯片rt1064工程/libraries/zf_common/: zf_common_debug.c  zf_common_headfile.h
小车芯片rt1064工程/libraries/zf_device/: zf_device_imu660ra.c  zf_device_imu963ra.c  zf_device_ips200.c  zf_device_ips200.h  zf_device_wifi_uart.c  zf_device_wifi_uart.h
小车芯片rt1064工程/libraries/zf_driver/: zf_driver_soft_iic.c  zf_driver_uart.c  zf_driver_uart.h
小车芯片rt1064工程/project/mdk/: JY901.c  JY901.h  rt1064.uvguix.ASUS  rt1064.uvguix.SUBLISH  rt1064.uvguix.rose  rt1064.uvoptx  rt1064.uvprojx
(+3309 files in other folders)
